--- a/catcafe.css
+++ b/catcafe.css
@@ -44,7 +44,43 @@
 
 
 /* Note: you must not use any @import directive */
-
+/* vietnamese */
+/* cyrillic-ext */
+@font-face {
+    font-family: 'Caveat';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/caveat/v17/WnznHAc5bAfYB2QRah7pcpNvOx-pjfJ9eIipYSxP.woff2) format('woff2');
+    unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
+}
+/* cyrillic */
+@font-face {
+    font-family: 'Caveat';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/caveat/v17/WnznHAc5bAfYB2QRah7pcpNvOx-pjfJ9eIGpYSxP.woff2) format('woff2');
+    unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
+/* latin-ext */
+@font-face {
+    font-family: 'Caveat';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/caveat/v17/WnznHAc5bAfYB2QRah7pcpNvOx-pjfJ9eIupYSxP.woff2) format('woff2');
+    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+    font-family: 'Caveat';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/caveat/v17/WnznHAc5bAfYB2QRah7pcpNvOx-pjfJ9eIWpYQ.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
 
 /********* You can start writing your CSS below this line: **********/
 #ctc_game_area {
@@ -61,9 +97,12 @@
 }
 
 .ctc_player_name {
+    font-family: 'Caveat', cursive;
+    font-size: 22px;
+    /* border: solid 1px black; */
     position: relative;
     margin: auto;
-    width: 100px;
+    width: 150px;
 	height: 40px;
 }
 
@@ -233,6 +272,8 @@
 }
 
 .ctc_sub_scoring {
+    font-family: 'Caveat', cursive;
+    font-size: 22px;
     position: relative;
     height: 20px;
     width: 25px;
@@ -246,6 +287,8 @@
 }
 
 .ctc_final_scoring {
+    font-family: 'Caveat', cursive;
+    font-size: 22px;
     position: relative;
     height: 21px;
     width: 24px;
@@ -258,6 +301,8 @@
 }
 
 .ctc_final_scoring_total {
+    font-family: 'Caveat', cursive;
+    font-size: 22px;
     position: relative;
     height: 21px;
     width: 56px;
